Additional logic swagger error handling
